--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,8 @@ dependencies = [
 "Homepage" = "https://github.com/sixxio/ftsf"
 "Documentation" = "https://sixxio.github.io/ftsf/"
 "Bug Tracker" = "https://github.com/sixxio/ftsf/issues"
+
+[tool.setuptools]
+include-package-data = true
+[tool.setuptools.package-data]
+mypkg = "*.*"
